k8s/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: kube-news-app
  namespace: kube-news

spec:
  replicas: 1

  selector:
    matchLabels:
      app: kube-news-app

  template:
    metadata:
      labels:
        app: kube-news-app

    spec:
      containers:
      - name: kube-news-app
        image: kube-news-app:latest
        imagePullPolicy: IfNotPresent

        ports:
        - containerPort: 8080
