k8s/app-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: kube-news-app
  namespace: kube-news

spec:
  selector:
    app: kube-news-app

  ports:
  - port: 8080
    targetPort: 8080
      # nodePort: 30007

  type: NodePort
