k8s/nginx-service.yaml
apiVersion: v1
kind: Service

metadata: 
  name: nginx
  namespace: kube-news

spec:
  type: ClusterIP

  selector:
    app: nginx
  
  ports:
  - port: 80
    targetPort: 80
