k8s/postgres-services.yaml
apiVersion: v1
kind: Service

metadata:
  name: postgres
  namespace: kube-news

spec:
  selector:
    app: postgres

  ports:
  - port: 5432
    targetPort: 5432

  type: ClusterIP
