k8s/app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata: 
  name: kube-news-ingress
  namespace: kube-news

spec:
  ingressClassName: nginx

  rules:
  - host: 192.168.111.80.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kube-news-app
            port:
              number: 8080
